deployment/blue-green-2/deployment-green.yml
kind: "DeploymentConfig"
apiVersion: "v1"
metadata:
    name: "consdata-tech-deployment-v2"
    labels:
        app: "consdata-tech-deployment"
        version: "v2"
spec:
    template:
        metadata:
            labels:
                name: "consdata-tech-deployment"
                app: "consdata-tech-deployment"
                version: "v2"
        spec:
            containers:
                -   name: "consdata-tech-deployment"
                    image: "docker-registry.default.svc:5000/consdata-tech/consdata-tech-deployment:v2"
                    ports:
                        -   containerPort: 8080
                            protocol: "TCP"
                    livenessProbe:
                        failureThreshold: 3
                        httpGet:
                            path: /actuator/health
                            port: 8080
                            scheme: HTTP
                        initialDelaySeconds: 20
                        periodSeconds: 10
                        successThreshold: 1
                        timeoutSeconds: 1
                        name: consdata-tech-deployment
                    readinessProbe:
                        failureThreshold: 3
                        httpGet:
                            path: /actuator/health
                            port: 8080
                            scheme: HTTP
                        initialDelaySeconds: 20
                        periodSeconds: 10
                        successThreshold: 1
                        timeoutSeconds: 1
                    resources:
                        limits:
                            cpu: 1000Mi
                            memory: 200Mi
                        requests:
                            cpu: 1m
                            memory: 1Mi
    replicas: 5
    strategy:
        type: "Rolling"
    paused: false
    revisionHistoryLimit: 10
    minReadySeconds: 0
    triggers:
        -   imageChangeParams:
                automatic: true
                containerNames:
                    - consdata-tech-deployment
                from:
                    kind: ImageStreamTag
                    name: 'consdata-tech-deployment:v2'
                    namespace: consdata-tech
            type: ImageChange
