deployment/blue-green-2/service-blue.yml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: consdata-tech-deployment
    name: consdata-tech-deployment-service-v1
spec:
    selector:
        app: consdata-tech-deployment
        version: "v1"
    ports:
        - name: http
          port: 8080
          protocol: TCP
          targetPort: 8080
